--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,4 +1,5 @@
-GOOGLE_API_KEY="AIzaSyAR3Sg_FegV2gUT5lk7B_zUvPIHlQlt_oY"
-CLOUDINARY_CLOUD_NAME="dvrisfwfu"
-CLOUDINARY_API_KEY=899378428336212
-CLOUDINARY_API_SECRET="QQ5BjZ8EjRCG7oiJdDkAzGkvkEw"
+# enter your credentials
+GOOGLE_API_KEY=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
